# swc-jest-coverage-nestjs-plugin

./: Cargo.toml  LICENSE  README.md  build.sh  package.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: detection.rs  lib.rs  transforms.rs  visitor.rs
tests/: config_test.rs  transform_test.rs
tests/fixture/class_level_decorator/: output.js
tests/fixture/complex_arrow/: config.json  input.js  output.js
tests/fixture/decorator_args/: input.js  output.js
tests/fixture/default_config/: output.js
tests/fixture/metadata_design_type_constructor/: config.json  output.js
tests/fixture/metadata_design_type_simple_preserved/: config.json  input.js
tests/fixture/metadata_design_type_simplify/: output.js
tests/fixture/metadata_strip/: input.js  output.js
tests/fixture/metadata_typeof_constructor/: output.js
tests/fixture/metadata_typeof_design_type_preserved/: config.json  output.js
tests/fixture/metadata_typeof_simplify/: input.js  output.js
tests/fixture/mongoose_prop/: input.js
tests/fixture/multiple_decorators/: input.js  output.js
tests/fixture/nested_arrow/: input.js
tests/fixture/non_arrow_type/: input.js
tests/fixture/override_design_type_match/: config.json
tests/fixture/override_design_type_no_match/: config.json  output.js
tests/fixture/resolve_field/: input.js  output.js
