[package]
name = "swc-jest-coverage-nestjs-plugin"
version = "0.2.3"
edition = "2021"
description = "SWC plugin to fix NestJS decorator coverage reporting with Istanbul/Jest"
authors = ["Liively Pty Ltd"]
license = "MIT"
repository = "https://github.com/LIIVE-LY/swc-jest-coverage-nestjs-plugin"
homepage = "https://github.com/LIIVE-LY/swc-jest-coverage-nestjs-plugin#readme"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
swc_core = { version = "50", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "ecma_ast",
    "common",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
swc_core = { version = "50", features = ["testing_transform", "ecma_parser"] }
testing = "19"
